Actions
Bug #16354
closedMemory corruption in Enumerable#reverse_each
Bug #16354:
Memory corruption in Enumerable#reverse_each
Actions
Added by ktsj (Kazuki Tsujimoto) almost 7 years ago. Updated over 6 years ago.
Applied in changeset [ruby-dev:50867] [Bug #16354]" href="/projects/ruby-master/repository/git/revisions/ff41663403d3eb76d95f465cb94e14d2faaa04d1">git|ff41663403d3eb76d95f465cb94e14d2faaa04d1.
Fix memory corruption in Enumerable#reverse_each [ruby-dev:50867] [Bug #16354]
ruby_2_6 r67835 merged revision(s) ff41663403d3eb76d95f465cb94e14d2faaa04d1.