Fix memory corruption in Enumerable#reverse_each [ruby-dev:50867] [Bug #16354]